Construção da primeira seção

--- a/positivus/index.html
+++ b/positivus/index.html
@@ -6,7 +6,7 @@
     <title>Positivus</title>
   </head>
   <body>
-    <div id="root" class="bg-zinc-900"></div>
+    <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
